# personal-assistant

./: .gitignore  agents.py  app.py  checkpoints.csv  notes.md  pyproject.toml  readme.md  requirements.txt  self_checklist.md  sidekick.py  tools.py
