[project]
name = "personal-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0,<1.0.0",
    "gradio>=5.0.0,<6.0.0",
    "langchain>=0.3.0,<1.0.0",
    "langchain-community>=0.3.0,<1.0.0",
    "langchain-core>=0.3.0,<1.0.0",
    "langchain-experimental>=0.3.0,<1.0.0",
    "langchain-openai>=0.2.0,<1.0.0",
    "langgraph>=0.2.0,<1.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0,<3.0.0",
    "playwright>=1.40.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "requests>=2.31.0,<3.0.0",
    "wikipedia>=1.4.0,<2.0.0",
]
